style.css
html,
body {
  font-size: 10px;
  font-weight: 400;
  scroll-behavior: smooth;
  line-height: 1.5;
}

h1,
h2,
h3,
h4,
h5,
h6,
p {
  margin: 0;
}

h1 {
  font-size: 9rem;
  line-height: 1.4;
  font-weight: 600;
}

h2 {
  font-size: 4.7rem;
  font-weight: 600;
  display: inline-block;
  text-transform: capitalize;
  line-height: 1.2;
  margin-bottom: 2rem;
}

h3 {
  font-size: 3.1rem;
  line-height: 1.2;
  font-weight: 700;
}

h4 {
  font-size: 2.5rem;
  font-weight: 700;
  line-height: 1;
}

h5 {
  font-size: 1.8rem;
  font-weight: 600;
  line-height: 1;
}

p {
  font-size: 1.6rem;
  line-height: 1.6;
  margin-top: 1rem;
}

ul {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

a,
a:active,
a:focus,
a:hover,
button {
  text-decoration: none;
  outline: 0;
}

a:hover,
button:hover {
  --webkit-transition: all 0.3s ease-in;
  -o-transition: all 0.3s ease-in;
  -moz-transition: all 0.3s ease-in;
  transition: all 0.3s ease-in;
}

/* Navbar */
.header {
  position: absolute;
  top: 2rem;
  width: 100%;
}

header {
  margin-bottom: 25rem;
}

.header .navbar-nav .nav-link {
  font-size: 1.6rem;
  font-weight: 300;
  margin: 0 2rem;
}

.header .navbar-nav .btn{
  font-size: 1.6rem;
  background: url(assets/images/Rectangle\ 1.jpg);
  border: 0;
  padding: 2rem;
  margin-top: 0;
  border-radius: 0;
}

.header ul {
  margin-left: auto;
}

/* Banner */
.banner-section {
  text-align: center;
  background: url(assets/images/Rectangle\ 17.jpg);
  padding: 5rem;
  margin-bottom: 18rem;
}

.banner-section h1 {
  font-size: 7rem;
  color: #FFF;
  font-weight: 300;
}

/* Divider Section*/
.divider-section {
  margin-bottom: 5rem;
}

.divider-section .title {
  color: #000;
  font-size: 6rem;
  margin-bottom: 0;
}

.divider-section .title-color {
  color: #34CBE1;
  font-size: 6rem;
}

.divider-section .description {
  color: #000000;
  font-size: 2.5rem;
}

.divider-section .border-start {
  height: 130px;
  width: 2px;
  background-color: #000;
  display: inline-block;
  margin-left: 10rem;
}

@media only screen and (max-width: 600px) {
  .divider-section .border-start {
    height: 2px;
    width: 100px;
  }
}

/* Alt Divider Section*/
.alt-divider-section {
  margin-bottom: 5rem;
}

.alt-divider-section .title {
  color: #000;
  font-size: 6rem;
  margin-bottom: 0;
}

.alt-divider-section .title-color {
  color: #34CBE1;
  font-size: 6rem;
}

.alt-divider-section .description {
  color: #000000;
  font-size: 2.5rem;
  font-weight: 200;
}

.alt-divider-section .border-start {
  height: 130px;
  width: 2px;
  background-color: #000;
  display: inline-block;
  margin-left: 10rem;
}

@media only screen and (max-width: 600px) {
  .alt-divider-section .border-start {
    height: 2px;
    width: 100px;
  }
}

/*Border Section */
.borders-section .border-bottom {
  width: 350px;
  height: 2px;
  background-color: #eeeee4;
  display: inline-block;
  margin-left: 3rem;
  margin-bottom: 5rem;
}
/* Cards Section*/

.cards-section {
  margin-bottom: 15rem;
}

.cards-section .card {
  border: none;
}

.cards-section .card-group {
  margin-bottom: 2rem;
}

.cards-section .card img {
  height: 8rem;
  width: 8rem;
  margin-right: 5rem;
  margin-bottom: 2rem;
}

.cards-section .card-body h5 {
  font-weight: 700;
  margin-bottom: 1rem;
  font-size: 3rem;
}

.cards-section .card-body p {
  font-weight: 400;
  color: #646464;
  width: 22rem;
  font-size: 2rem;
}

.cards-section .button-container .btn{
  font-size: 3rem;
  background: url(assets/images/Rectangle\ 1.jpg);
  color: #FFF;
  border: 0;
  padding: 2rem 5rem;
  margin-top: 5rem;
  border-radius: 0;
}

/*Text Cards Section*/
.text-cards-section .container{
  margin-top: 10rem;
}

.text-cards-section .card {
  border-radius: 3rem;
  padding: 2rem;
  padding-right: 5rem;
}

.text-cards-section .row .card-head {
  background-color: #FFF;
}

.text-cards-section .row .card-head h3 {
  margin-bottom: 2rem;
  padding-top: 2rem;
}

.text-cards-section .border-bottom {
    height: 3px;
    width: 200px;
    background-color: #000;
    display: inline-block;
    margin-bottom: 4rem;
}

.text-cards-section .row .card-title h3 {
  color: #30B2D2;
}

.text-cards-section .row .card-text {
  font-weight: 100;
  padding-bottom: 4rem;
}

.text-cards-section .row .card-title .alt-head {
  color: #A6D856;
}

.text-cards-section .button-container .btn{
  font-size: 3rem;
  background: url(assets/images/Rectangle\ 1.jpg);
  color: #FFF;
  border: 0;
  padding: 2rem 5rem;
  margin-top: 10rem;
  margin-bottom: 15rem;
  border-radius: 0;
}

/*Icon Cards Section*/

.icon-cards-section .card {
  border: none;
}

.icon-cards-section .card h4 {
  color: #34CBE1;
}

.icon-cards-section p {
  font-weight: 300;
  font-size: 2rem;
  margin-top: 3rem;
}

.icon-cards-section .card-body {
  margin-top: 5rem;
  margin-right: 1rem;
  padding-left: 0;
  padding-right: 0;
}

.icon-cards-section img {
  max-width: 30rem;
  height: auto;
}

.icon-cards-section .button-container .btn{
  font-size: 3rem;
  background: url(assets/images/Rectangle\ 1.jpg);
  color: #FFF;
  border: 0;
  padding: 2rem 5rem;
  margin-top: 2.5rem;
  margin-bottom: 15rem;
  border-radius: 0;
}

/* Footer Section*/

.footer-section {
  margin-top: 10rem;
}

.footer-section .col-xl-4 .img-main {
  width: 600px;
  height: 450px;
  padding: 0;
  padding-right: 20rem;
}

.footer-section .col-xl-4 .img-google {
  height: 40px;
  width: 120px;
  margin-top: 5rem;
}

.footer-section .col-xl-4 .img-apple {
  height: 60px;
  width: 180px;
  margin-top: 4rem;
}

.footer-section .col-xl-8 .list-group-item {
  border: none;
}

.footer-section .col-xl-8 .list-group-item h4 {
  color: #34CBE1;
}

.footer-section .col-xl-8 .list-group-item p {
  font-weight: 300;
}

.footer-section .button-container .btn{
  font-size: 2rem;
  background: url(assets/images/Rectangle\ 1.jpg);
  color: #FFF;
  border: 0;
  padding: 2rem 5rem;
  margin-top: 3rem;
  margin-bottom: 15rem;
  margin-left: 5rem;
  border-radius: 0;
}

